--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.test.zxingtest"
@@ -29,4 +29,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/core-3.2.1.jar')
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile files('libs/avoscloud-sdk-v3.15.6.jar')
+    compile files('libs/avoscloud-feedback-v3.15.6.jar')
+    compile files('libs/fastjson.jar')
+    compile files('libs/okhttp-2.6.0-leancloud.jar')
+    compile files('libs/okio-1.6.0-leancloud.jar')
+    compile files('libs/android-support-v4.jar')
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
