--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,11 @@
         <activity android:name="com.sduwh.qrcodeSacnner.TakeScreenShotActivity"
                   android:excludeFromRecents="true">
 
+                <intent-filter>
+                    <action android:name="com.scytec.datamobile.vd.gui.android.AppPreferenceActivity" />
+                    <category android:name="android.intent.category.DEFAULT" />
+                </intent-filter>
+           
         </activity>
         <activity
             android:name="com.sduwh.qrcodeSacnner.ThreadActivity"
