--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
         disable 'MissingTranslation'
     }
 }
-
+repositories {
+    jcenter();
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -39,4 +41,6 @@ dependencies {
     compile files('libs/okio-1.6.0-leancloud.jar')
     //compile files('libs/android-support-v4.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    provided 'de.robv.android.xposed:api:82'
+    provided 'de.robv.android.xposed:api:82:sources'
 }
