--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,19 +5,13 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="22"/>
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <!-- unavailable in API 23 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <!-- Don't require camera, as this requires a rear camera. This allows it to work on the Nexus 7 -->
@@ -58,6 +52,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data android:name="xposedmodule"
+            android:value="true"/>
+        <meta-data android:name="xposeddescription"
+            android:value="quick qrcode"/>
+        <meta-data android:name="xposedminversion"
+            android:value="30"/>
         <activity
             android:name="com.sduwh.qrcodeSacnner.MainActivity"
             android:label="@string/app_name"
@@ -65,19 +65,17 @@
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_MOUNTED"/>
-
                 <data android:scheme="file"/>
             </intent-filter>
         </activity>
 
         <receiver android:name="com.sduwh.qrcodeSacnner.BootCompletedReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
@@ -88,7 +86,6 @@
 
         <activity android:name="com.sduwh.qrcodeSacnner.TakeScreenShotActivity"
                   android:excludeFromRecents="true">
-
                 <intent-filter>
                     <action android:name="com.scytec.datamobile.vd.gui.android.AppPreferenceActivity" />
                     <category android:name="android.intent.category.DEFAULT" />
@@ -98,7 +95,6 @@
         <activity
             android:name="com.sduwh.qrcodeSacnner.ThreadActivity"
             android:launchMode="singleInstance">
-
         </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
